--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/public/images/curriculum-vitae.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Evelio Reillo Espino</title>
+    <link rel="apple-touch-icon" href="https://res.cloudinary.com/dj9npvnlg/image/upload/v1696329838/DSC00967_1_fniokv.png" />
   </head>
   <body>
     <div id="root"></div>
